--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -123,6 +123,9 @@
     &__heading
       font-size: 1.83rem
       margin-bottom: 2rem
+    &__word
+      &::after
+        display: none
     &__text
       max-width: 95%
       font-size: 1.17rem
